1_posts/infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          imagePullPolicy: Never
          image: xtophe02/client
          # ports:
          #   - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  # type: ClusterIP
  # type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: client
      # nodePort: 31515
  selector:
    app: client
