1_posts/infra/k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          imagePullPolicy: Never
          image: xtophe02/event-bus
          # ports:
          #   - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-srv
spec:
  # type: ClusterIP
  # type: NodePort
  ports:
    - port: 4005
      targetPort: 4005
      protocol: TCP
      name: event-bus
      # nodePort: 31515
  selector:
    app: event-bus
