1_posts/infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          imagePullPolicy: Never
          image: xtophe02/posts
          # ports:
          #   - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  # type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: posts
      # nodePort: 31515
  selector:
    app: posts
